--- a/ship.html
+++ b/ship.html
@@ -591,6 +591,7 @@
 		if (id.substring(0,3) != "tl_"){
 			while (count <= length){
 				if (document.getElementById('jp_'+skinId+'_'+count+'') == null){
+					++count;
 					continue;
 				}
 				document.getElementById('jp_'+skinId+'_'+count+'').click();
@@ -601,6 +602,7 @@
 		} else if (id.substring(0,3) == "tl_"){
 			while (count <= length){
 				if (document.getElementById('tl_jp_'+skinId+'_'+count+'') == null){
+					++count;
 					continue;
 				}
 				document.getElementById('tl_jp_'+skinId+'_'+count+'').click();
