--- a/ship.html
+++ b/ship.html
@@ -586,6 +586,7 @@
 		var length = 0;
 		while (document.getElementById('event_'+skinId+'_'+count+'') != null){
 			++length;
+			++count;
 		}
 		count = 1;
 		if (id.substring(0,3) != "tl_"){
