--- a/ship.html
+++ b/ship.html
@@ -587,6 +587,7 @@
 		while (document.getElementById('event_'+skinId+'_'+count+'') != null){
 			++length;
 			++count;
+			console.log(length + " " + count);
 		}
 		count = 1;
 		if (id.substring(0,3) != "tl_"){
