--- a/ship.html
+++ b/ship.html
@@ -156,17 +156,27 @@
 	
 	function setShipRarityHighlight(rarity){
 		if (rarity == "Super Rare") {
-			document.getElementById("shipRarityColor").style = "background:#AEAB66;height:30px";
-			document.getElementById("shipRarityColor2").style = "background:#AEAB66;height:30px";
-			document.getElementById("shipRarityColor3").style = "background:#AEAB66;height:30px";
-			document.getElementById("shipRarityColor4").style = "background:#AEAB66;height:30px";
-			document.getElementById("shipRarityColor5").style = "background:#AEAB66;height:30px";
-			document.getElementById("shipRarityColor6").style = "background:#AEAB66;height:30px";
-			document.getElementById("shipRarityColor7").style = "background:#AEAB66;height:30px;width:40%;";
-			document.getElementById("shipRarityColor8").style = "background:#AEAB66;height:30px;width:60%;";
-			document.getElementById("shipRarityColor9").style = "background:#AEAB66;height:30px";
+			document.getElementById("shipRarityColor").style = "background:#beb988;height:30px";
+			document.getElementById("shipRarityColor2").style = "background:#beb988;height:30px";
+			document.getElementById("shipRarityColor3").style = "background:#beb988;height:30px";
+			document.getElementById("shipRarityColor4").style = "background:#beb988;height:30px";
+			document.getElementById("shipRarityColor5").style = "background:#beb988;height:30px";
+			document.getElementById("shipRarityColor6").style = "background:#beb988;height:30px";
+			document.getElementById("shipRarityColor7").style = "background:#beb988;height:30px;width:40%;";
+			document.getElementById("shipRarityColor8").style = "background:#beb988;height:30px;width:60%;";
+			document.getElementById("shipRarityColor9").style = "background:#beb988;height:30px";
+		} else if (rarity == "Elite") {
+			document.getElementById("shipRarityColor").style = "background:#b080b0;height:30px";
+			document.getElementById("shipRarityColor2").style = "background:#b080b0;height:30px";
+			document.getElementById("shipRarityColor3").style = "background:#b080b0;height:30px";
+			document.getElementById("shipRarityColor4").style = "background:#b080b0;height:30px";
+			document.getElementById("shipRarityColor5").style = "background:#b080b0;height:30px";
+			document.getElementById("shipRarityColor6").style = "background:#b080b0;height:30px";
+			document.getElementById("shipRarityColor7").style = "background:#b080b0;height:30px;width:40%;";
+			document.getElementById("shipRarityColor8").style = "background:#b080b0;height:30px;width:60%;";
+			document.getElementById("shipRarityColor9").style = "background:#b080b0;height:30px";
 		}
-	}
+	}	
 	
 	function setShipSkinNav(data){
 		var firstIteration = true;
