--- a/shiplist.html
+++ b/shiplist.html
@@ -13,7 +13,8 @@
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <!-- Our Custom CSS -->
-    <link rel="stylesheet" href="css\mainstyle.css">
+    <link rel="stylesheet" href="css\mainstyle.css">	
+	<link rel="stylesheet" href="css/shiplist.css">
 	<!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
 
@@ -21,6 +22,72 @@
     <!-- Font Awesome JS -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
+
+	<script>
+		function loadJSON(callback) {
+			var xobj = new XMLHttpRequest();
+				xobj.overrideMimeType("application/json");
+			xobj.open('GET', 'shiplist.json', true); // Replace 'my_data' with the path to your file
+			xobj.onreadystatechange = function () {
+				  if (xobj.readyState == 4 && xobj.status == "200") {
+					// Required use of an anonymous callback as .open will NOT return a value but simply returns undefined in asynchronous mode
+					callback(xobj.responseText);
+				  }
+			};
+			xobj.send(null);  
+		}
+		
+		function load(){
+			loadJSON(function(response) {
+				// Parse JSON string into object
+				var actual_JSON = JSON.parse(response);
+				var text = '';
+				for (var x in actual_JSON){
+					text = text + '\
+					<div class="maindiv">\
+						<div class="cornerdiv"">';
+						
+					if (actual_JSON[x].hull == "Aircraft Carrier" || actual_JSON[x].hull == "Light Aircraft Carrier" ){						
+						text = text + '\
+							<img src="http://alg-wiki.com/Images/Hull/cv.png" style="padding-left:3px">';
+					} else if (actual_JSON[x].hull == "Destroyer"){						
+						text = text + '\
+							<img src="http://alg-wiki.com/Images/Hull/dd.png" style="padding-left:3px">';
+					}
+					text = text + '\
+						</div>\
+						<div class="centerdiv">';
+					if (actual_JSON[x].navy == "Eagle Union") {
+						text = text + '\
+							<img src="http://alg-wiki.com/Images/Navy/uss_icon.png">';
+					} else if (actual_JSON[x].navy == "Sakura Empire") {
+						text = text + '\
+							<img src="http://alg-wiki.com/Images/Navy/ijn_icon.png">';
+					}
+					text = text + '\
+						</div>\
+						<div class="cornerdiv">'+x+'</div>';
+					if (actual_JSON[x].rarity == "Super Rare"){
+						text = text + '\
+						<div class="imgdiv" style="background-color:#beb988">';
+					} else if (actual_JSON[x].rarity == "Elite"){
+						text = text + '\
+						<div class="imgdiv" style="background-color:#b080b0">';
+					}
+					text = text + '\
+							<img src="'+actual_JSON[x].icon+'">\
+						</div>\
+						<div class="textdiv">'+actual_JSON[x].name+'</div>\
+					</div>';
+				}
+				document.getElementById('listtable').innerHTML = text;
+			});
+		}
+		
+		window.onload = function() {
+			
+		};
+	</script>
 
 </head>
 
@@ -94,7 +161,30 @@
 <!-- content -->
 <!-- content -->
 
-
+<table class="wikitablewide" style="width:100%">
+	<tr style="text-align:center;background-color:#262f3b;">				
+		<td>
+			Ships
+		</td>
+	</tr>
+	<tr>
+		<td style="text-align:left;padding-bottom:10px;" id="listtable">
+			<div class="maindiv">
+				<div class="cornerdiv"">
+					<img src="http://alg-wiki.com/Images/Hull/cv.png" style="padding-left:3px">
+				</div>
+				<div class="centerdiv">
+					<img src="http://alg-wiki.com/Images/Navy/uss_icon.png">
+				</div>				
+				<div class="cornerdiv">399</div>
+				<div class="imgdiv" style="background-color:#b080b0">
+					<img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/Ships/155_Ayanami/Icon/icon.png">
+				</div>
+				<div class="textdiv">Admiral Graf Spee</div>
+			</div>
+		</td>
+	</tr>
+</table>
 
 <!-- content -->
 <!-- content -->
