--- a/shiplist.html
+++ b/shiplist.html
@@ -77,7 +77,9 @@
 					text = text + '\
 							<img src="'+actual_JSON[x].icon+'">\
 						</div>\
-						<div class="textdiv">'+actual_JSON[x].name+'</div>\
+						<div class="textdiv">\
+							<a href="ship#'+actual_JSON[x].link+'">'+actual_JSON[x].name+'</a>\
+						</div>\
 					</div>';
 				}
 				document.getElementById('listtable').innerHTML = text;
