--- a/ship.html
+++ b/ship.html
@@ -672,7 +672,7 @@
                    
                 </li>
                 <li class="active">
-                    <a href="#">Ship</a>
+                    <a href="shiplist">Ship</a>
                 </li>
                 <li>
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Equipment</a>
