--- a/shiplist.html
+++ b/shiplist.html
@@ -102,12 +102,12 @@
             </div>
 
             <ul class="list-unstyled components">
-                <li class="active">
+                <li>
                     <a href="#">Home</a>
                    
                 </li>
-                <li>
-                    <a href="ship#essex">Ship</a>
+                <li class="active">
+                    <a href="shiplist">Ship</a>
                 </li>
                 <li>
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Equipment</a>
