--- a/shiplist.html
+++ b/shiplist.html
@@ -75,7 +75,7 @@
 						<div class="imgdiv" style="background-color:#b080b0">';
 					}
 					text = text + '\
-							<img src="'+actual_JSON[x].icon+'">\
+							<a href="ship#'+actual_JSON[x].link+'"><img src="'+actual_JSON[x].icon+'"></a>\
 						</div>\
 						<div class="textdiv">\
 							<a href="ship#'+actual_JSON[x].link+'">'+actual_JSON[x].name+'</a>\
@@ -103,7 +103,7 @@
 
             <ul class="list-unstyled components">
                 <li>
-                    <a href="#">Home</a>
+                    <a href="./">Home</a>
                    
                 </li>
                 <li class="active">
