--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                    
                 </li>
                 <li>
-                    <a href="ship#essex">Ship</a>
+                    <a href="shiplist">Ship</a>
                 </li>
                 <li>
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Equipment</a>
