--- a/ship.html
+++ b/ship.html
@@ -184,6 +184,7 @@
 		for (var x in data.skin) {
 			var container = document.createElement('div');
 			var escaped = JSON.stringify(data.skin[x]).replace(/'/g, "\\'");
+			escaped = escaped.replace(/"/g, "\\\"");
 			container.className = 'btnContainer';			
 			container.setAttribute('onclick','onSkinNavButtonClick(\'' + escaped + '\')');
 			if (firstIteration){
@@ -554,7 +555,7 @@
 						text = text + '\
 				</td>\
 				<td id="cn_'+skinId+'_'+y+'" style="padding: 0px 5px 0px 5px;cursor:pointer;" onclick="switchTranslation(&quot;'+chineseTL+'&quot;,\'cn_'+skinId+'_'+y+'\')">'+actual_JSON.lines.skin[x].dialogue[y].chinese+'</td>\
-				<td id="jp_'+skinId+'_'+y+'" style="padding: 0px 5px 0px 5px;cursor:pointer;" onclick="switchTranslation(&quot;'+actual_JSON.lines.skin[x].dialogue[y].japaneseTL+'&quot;,\'jp_'+skinId+'_'+y+'\')">'+actual_JSON.lines.skin[x].dialogue[y].japanese+'</td>\
+				<td id="jp_'+skinId+'_'+y+'" style="padding: 0px 5px 0px 5px;cursor:pointer;" onclick="switchTranslation(&quot;'+japaneseTL+'&quot;,\'jp_'+skinId+'_'+y+'\')">'+actual_JSON.lines.skin[x].dialogue[y].japanese+'</td>\
 				<td id="en_'+skinId+'_'+y+'" style="padding: 0px 5px 0px 5px;">'+actual_JSON.lines.skin[x].dialogue[y].english+'</td>\
 			</tr>';
 					}
