added CL and HMS icons

--- a/ship.html
+++ b/ship.html
@@ -143,6 +143,8 @@
 			document.getElementById("shipHullIcon").src = "Images/Hull/cv.png";
 		} else if (hull == "Destroyer") {
 			document.getElementById("shipHullIcon").src = "Images/Hull/dd.png";
+		} else if (hull == "Light Cruiser") {
+			document.getElementById("shipHullIcon").src = "Images/Hull/cl.png";
 		}
 	}
 	
@@ -151,6 +153,8 @@
 			document.getElementById("shipNavyIcon").src = "Images/Navy/uss_icon.png";
 		} else if (navy == "Sakura Empire") {
 			document.getElementById("shipNavyIcon").src = "Images/Navy/ijn_icon.png";
+		} else if (navy == "Royal Navy") {
+			document.getElementById("shipNavyIcon").src = "Images/Navy/hms_icon.png";
 		}
 	}
 	
