added all other hull and navy icons

--- a/ship.html
+++ b/ship.html
@@ -145,6 +145,14 @@
 			document.getElementById("shipHullIcon").src = "Images/Hull/dd.png";
 		} else if (hull == "Light Cruiser") {
 			document.getElementById("shipHullIcon").src = "Images/Hull/cl.png";
+		} else if (hull == "Heavy Cruiser") {
+			document.getElementById("shipHullIcon").src = "Images/Hull/ca.png";
+		} else if (hull == "Battleship" || hull == "Battlecruiser" || hull == "Monitor") {
+			document.getElementById("shipHullIcon").src = "Images/Hull/bb.png";
+		} else if (hull == "Submarine") {
+			document.getElementById("shipHullIcon").src = "Images/Hull/ss.png";
+		} else if (hull == "Repair Ship") {
+			document.getElementById("shipHullIcon").src = "Images/Hull/ar.png";
 		}
 	}
 	
@@ -155,6 +163,24 @@
 			document.getElementById("shipNavyIcon").src = "Images/Navy/ijn_icon.png";
 		} else if (navy == "Royal Navy") {
 			document.getElementById("shipNavyIcon").src = "Images/Navy/hms_icon.png";
+		} else if (navy == "Ironblood") {
+			document.getElementById("shipNavyIcon").src = "Images/Navy/kms_icon.png";
+		} else if (navy == "Dragon Empery" || navy == "Eastern Radiance" || navy == "Dragon Empire") {
+			document.getElementById("shipNavyIcon").src = "Images/Navy/roc_icon.png";
+		} else if (navy == "Northern Parliament" || navy == "North Union") {
+			document.getElementById("shipNavyIcon").src = "Images/Navy/sn_icon.png";
+		} else if (navy == "Vichya Dominion") {
+			document.getElementById("shipNavyIcon").src = "Images/Navy/mnf_icon.png";
+		} else if (navy == "Iris Libre") {
+			document.getElementById("shipNavyIcon").src = "Images/Navy/ffnf_icon.png";
+		} else if (navy == "Universal") {
+			document.getElementById("shipNavyIcon").src = "Images/Navy/univ_icon.png";
+		} else if (navy == "Neptunia") {
+			document.getElementById("shipNavyIcon").src = "Images/Navy/hdn_icon.png";
+		} else if (navy == "Utawarerumono") {
+			document.getElementById("shipNavyIcon").src = "Images/Navy/uwrr_icon.png";
+		} else if (navy == "Bilibili") {
+			document.getElementById("shipNavyIcon").src = "Images/Navy/bili_icon.png";
 		}
 	}
 	
