--- a/shiplist.html
+++ b/shiplist.html
@@ -53,6 +53,21 @@
 					} else if (actual_JSON[x].hull == "Destroyer"){						
 						text = text + '\
 							<img src="http://alg-wiki.com/Images/Hull/dd.png" style="padding-left:3px">';
+					} else if (actual_JSON[x].hull == "Light Cruiser"){						
+						text = text + '\
+							<img src="http://alg-wiki.com/Images/Hull/cl.png" style="padding-left:3px">';
+					} else if (actual_JSON[x].hull == "Heavy Cruiser"){						
+						text = text + '\
+							<img src="http://alg-wiki.com/Images/Hull/ca.png" style="padding-left:3px">';
+					} else if (actual_JSON[x].hull == "Battleship" || actual_JSON[x].hull == "Battlecruiser" || actual_JSON[x].hull == "Monitor"){						
+						text = text + '\
+							<img src="http://alg-wiki.com/Images/Hull/bb.png" style="padding-left:3px">';
+					} else if (actual_JSON[x].hull == "Submarine"){						
+						text = text + '\
+							<img src="http://alg-wiki.com/Images/Hull/ss.png" style="padding-left:3px">';
+					} else if (actual_JSON[x].hull == "Repair Ship"){						
+						text = text + '\
+							<img src="http://alg-wiki.com/Images/Hull/ar.png" style="padding-left:3px">';
 					}
 					text = text + '\
 						</div>\
@@ -63,6 +78,36 @@
 					} else if (actual_JSON[x].navy == "Sakura Empire") {
 						text = text + '\
 							<img src="http://alg-wiki.com/Images/Navy/ijn_icon.png">';
+					} else if (actual_JSON[x].navy == "Royal Navy") {
+						text = text + '\
+							<img src="http://alg-wiki.com/Images/Navy/hms_icon.png">';
+					} else if (actual_JSON[x].navy == "Ironblood") {
+						text = text + '\
+							<img src="http://alg-wiki.com/Images/Navy/kms_icon.png">';
+					} else if (actual_JSON[x].navy == "Dragon Empery" || actual_JSON[x].navy == "Dragon Empire" || actual_JSON[x].navy == "Eastern Radiance") {
+						text = text + '\
+							<img src="http://alg-wiki.com/Images/Navy/roc_icon.png">';
+					} else if (actual_JSON[x].navy == "Northern Parliament" || actual_JSON[x].navy == "North Union") {
+						text = text + '\
+							<img src="http://alg-wiki.com/Images/Navy/sn_icon.png">';
+					} else if (actual_JSON[x].navy == "Vichya Dominion") {
+						text = text + '\
+							<img src="http://alg-wiki.com/Images/Navy/mnf_icon.png">';
+					} else if (actual_JSON[x].navy == "Iris Libre") {
+						text = text + '\
+							<img src="http://alg-wiki.com/Images/Navy/ffnf_icon.png">';
+					} else if (actual_JSON[x].navy == "Universal") {
+						text = text + '\
+							<img src="http://alg-wiki.com/Images/Navy/univ_icon.png">';
+					} else if (actual_JSON[x].navy == "Neptunia") {
+						text = text + '\
+							<img src="http://alg-wiki.com/Images/Navy/hdn_icon.png">';
+					} else if (actual_JSON[x].navy == "Utawarerumono") {
+						text = text + '\
+							<img src="http://alg-wiki.com/Images/Navy/uwrr_icon.png">';
+					} else if (actual_JSON[x].navy == "Bilibili") {
+						text = text + '\
+							<img src="http://alg-wiki.com/Images/Navy/bili_icon.png">';
 					}
 					text = text + '\
 						</div>\
