remove media links in json: skin images 0.1

--- a/ship.html
+++ b/ship.html
@@ -236,7 +236,7 @@
 			
 			document.getElementById('shipSkinNav').appendChild(container);
 		}
-		onSkinNavButtonClick(initial, x);
+		onSkinNavButtonClick(initial, id);
 	}
 	
 	function onSkinNavButtonClick(raw_skin, skinID){
@@ -269,7 +269,7 @@
 		
 		
 		removeShipExpressionNav();
-		setShipExpressionNav(skin);
+		setShipExpressionNav(skin, skinID);
 	}
 	
 	function setShipExpressionNav(data, skinID){
@@ -572,11 +572,8 @@
 					<b>English</b>\
 				</td>\
 			</tr>';
-			console.log("generating table");
 			for (var x in actual_JSON.lines.skin){
-				console.log("selecting: "+actual_JSON.lines.skin[x].label+" vs. "+skinId);
 				if (actual_JSON.lines.skin[x].label == skinId){
-					console.log("Selected");
 					for (var y in actual_JSON.lines.skin[x].dialogue){		
 						text = text + '\
 			<tr style="text-align:left">\
