--- a/ship.html
+++ b/ship.html
@@ -535,7 +535,7 @@
 	}
 	
 	function onDialogueSkinNavButtonClick(skinId){
-		var id = "ovrDia_"+skinId;
+		var id = "ovrDia_"+ "skin" + skinId;
 		var obj = document.getElementById('shipDialogueSkinNav').children;
 		
 		for (var i = 0; i < obj.length; ++i){
